arkts_static_test/03_Types/ets_cases/3.21.5_Readonly_Utility_Type/compile-fail/TYP_03_21_05_002_FAIL_WRITE.ets
/**
 * @id TYP_03_21_05_002_FAIL_WRITE
 * @expect compile-fail
 * @section 3.21.5
 * @design Readonly 字段不可重新赋值
 * @note 反向用例：spec 原例
 */
interface Issue2 {
  title: string
}

function testWriteFail(): void {
  const myIssue: Readonly<Issue2> = {title: "One"}
  myIssue.title = "Two"
}